--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/normalise.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <!-- HEADER -->
     <div class="wrapper">
       <header class="header">
         <div class="logo"><img src="./images/logo.svg" alt="логотип" /></div>
@@ -27,5 +27,73 @@
         </nav>
       </header>
     </div>
+    <!-- MAIN -->
+     <div class="wrapper">
+      <main class="main">
+        <!-- PROMO -->
+        <section class="promo">
+          <div class="promo-avatar">
+            <img src="./images/memoji-avatar.jpg" alt="мемоджи аватар">
+          </div>
+          <div class="promo-text">
+            <p>Привет 👋</p>
+            <h1 class="promo-heading">
+              <span class="promo-heading-top">Я фронтенд-разработчик и веб-дизайнер</span> <br> Меня зовут Дмитрий Сердцев и я делаю сайты для людей и компаний
+            </h1>
+            <div class="promo-socials">
+              <ul class="promo-socials-list">
+                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/linkedin.svg" alt="linkedin"></a></li>
+                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/twitter.svg" alt="twitter"></a></li>
+                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/github.svg" alt="github"></a></li>
+                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/stackoverflow.svg" alt="stackoverflow"></a></li>
+                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/youtube.svg" alt="youtube"></a></li>
+              </ul>
+              <a href="#" class="cv-download-link">Скачать резюме</a>
+            </div>
+          </div>
+        </section>
+        <!-- PROJECTS -->
+         <section class="projects">
+          <h2 class="projects-heading">
+            Последние проекты
+          </h2>
+          <div class="card-block">
+            <div class="card">
+              <div class="card-image">
+                <img src="./images/card-image-1.png" alt="изображение проекта">
+              </div>
+              <h3 class="card-heading">Мобильное приложение</h3>
+              <div class="using-techs">
+                <span class="using-techs-item">HTML</span>
+                <span class="using-techs-item">CSS</span>
+                <span class="using-techs-item">JavaScript</span>
+                <span class="using-techs-item">Git</span>
+                <span class="using-techs-item">Vitejs</span>
+              </div>
+              <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <div class="card-examples-links">
+                <a href="#" class="card-examples-link code-link">Код</a>
+                <a href="#" class="card-examples-link demo-link">Демо</a>
+              </div>
+            </div>
+            <div class="card">
+            <div class="card-image">
+              <img src="./images/card-image-2.png" alt="изображение проекта">
+            </div>
+            <h3 class="card-heading">Одностраничный промо-сайт</h3>
+            <div class="using-techs">
+              <span class="using-techs-item">HTML</span>
+              <span class="using-techs-item">CSS</span>
+            </div>
+            <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="card-examples-links">
+              <a href="#" class="card-examples-link code-link">Код</a>
+              <a href="#" class="card-examples-link demo-link">Демо</a>
+            </div>
+          </div>
+          </div>
+         </section>
+      </main>
+     </div>
   </body>
 </html>
