--- a/index.html
+++ b/index.html
@@ -1,99 +1,153 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Тест-сайт портфолио</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/normalise.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <!-- HEADER -->
-    <div class="wrapper">
-      <header class="header">
-        <div class="logo"><img src="./images/logo.svg" alt="логотип" /></div>
-        <nav class="header-nav">
-            <ul class="nav-list">
-                <li class="nav-list-item active"><a href="#" class="nav-list-link">Главная</a></li>
-                <li class="nav-list-item"><a href="#" class="nav-list-link">Проекты</a></li>
-                <li class="nav-list-item"><a href="#" class="nav-list-link">Обо мне</a></li>
-                <li class="nav-list-item"><a href="#" class="nav-list-link">Связаться</a></li>
-            </ul>
-        </nav>
-      </header>
-    </div>
-    <!-- MAIN -->
-     <div class="wrapper">
-      <main class="main">
-        <!-- PROMO -->
-        <section class="promo">
-          <div class="promo-avatar">
-            <img src="./images/memoji-avatar.jpg" alt="мемоджи аватар">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Тест-сайт портфолио</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/normalise.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+<!-- HEADER -->
+<div class="wrapper">
+  <header class="header">
+    <div class="logo"><img src="./images/logo.svg" alt="логотип" /></div>
+    <nav class="header-nav">
+      <ul class="nav-list">
+        <li class="nav-list-item active"><a href="#" class="nav-list-link">Главная</a></li>
+        <li class="nav-list-item"><a href="#" class="nav-list-link">Проекты</a></li>
+        <li class="nav-list-item"><a href="#" class="nav-list-link">Обо мне</a></li>
+        <li class="nav-list-item"><a href="#" class="nav-list-link">Связаться</a></li>
+      </ul>
+    </nav>
+  </header>
+</div>
+<!-- MAIN -->
+<div class="wrapper">
+  <main class="main">
+    <!-- PROMO -->
+    <section class="promo">
+      <div class="promo-avatar">
+        <img src="./images/memoji-avatar.jpg" alt="мемоджи аватар">
+      </div>
+      <div class="promo-text">
+        <p>Привет 👋</p>
+        <h1 class="promo-heading">
+          <span class="promo-heading-top">Я фронтенд-разработчик и веб-дизайнер</span> <br> Меня зовут Дмитрий Сердцев и
+          я делаю сайты для людей и компаний
+        </h1>
+        <div class="promo-socials">
+          <ul class="promo-socials-list">
+            <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img
+                  src="./images/social-icons/linkedin.svg" alt="linkedin"></a></li>
+            <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img
+                  src="./images/social-icons/twitter.svg" alt="twitter"></a></li>
+            <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img
+                  src="./images/social-icons/github.svg" alt="github"></a></li>
+            <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img
+                  src="./images/social-icons/stackoverflow.svg" alt="stackoverflow"></a></li>
+            <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img
+                  src="./images/social-icons/youtube.svg" alt="youtube"></a></li>
+          </ul>
+          <a href="#" class="cv-download-link">Скачать резюме</a>
+        </div>
+      </div>
+    </section>
+    <!-- PROJECTS -->
+    <section class="projects">
+      <h2 class="projects-heading">
+        Последние проекты
+      </h2>
+      <div class="card-block">
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/card-image-1.png" alt="изображение проекта">
           </div>
-          <div class="promo-text">
-            <p>Привет 👋</p>
-            <h1 class="promo-heading">
-              <span class="promo-heading-top">Я фронтенд-разработчик и веб-дизайнер</span> <br> Меня зовут Дмитрий Сердцев и я делаю сайты для людей и компаний
-            </h1>
-            <div class="promo-socials">
-              <ul class="promo-socials-list">
-                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/linkedin.svg" alt="linkedin"></a></li>
-                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/twitter.svg" alt="twitter"></a></li>
-                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/github.svg" alt="github"></a></li>
-                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/stackoverflow.svg" alt="stackoverflow"></a></li>
-                <li class="promo-socials-item"><a href="#" class="promo-socials-link"><img src="./images/social-icons/youtube.svg" alt="youtube"></a></li>
-              </ul>
-              <a href="#" class="cv-download-link">Скачать резюме</a>
-            </div>
+          <h3 class="card-heading">Мобильное приложение</h3>
+          <div class="using-techs">
+            <span class="using-techs-item">HTML</span>
+            <span class="using-techs-item">CSS</span>
+            <span class="using-techs-item">JavaScript</span>
+            <span class="using-techs-item">Git</span>
+            <span class="using-techs-item">Vitejs</span>
           </div>
-        </section>
-        <!-- PROJECTS -->
-         <section class="projects">
-          <h2 class="projects-heading">
-            Последние проекты
-          </h2>
-          <div class="card-block">
-            <div class="card">
-              <div class="card-image">
-                <img src="./images/card-image-1.png" alt="изображение проекта">
-              </div>
-              <h3 class="card-heading">Мобильное приложение</h3>
-              <div class="using-techs">
-                <span class="using-techs-item">HTML</span>
-                <span class="using-techs-item">CSS</span>
-                <span class="using-techs-item">JavaScript</span>
-                <span class="using-techs-item">Git</span>
-                <span class="using-techs-item">Vitejs</span>
-              </div>
-              <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <div class="card-examples-links">
-                <a href="#" class="card-examples-link code-link">Код</a>
-                <a href="#" class="card-examples-link demo-link">Демо</a>
-              </div>
-            </div>
-            <div class="card">
-            <div class="card-image">
-              <img src="./images/card-image-2.png" alt="изображение проекта">
-            </div>
-            <h3 class="card-heading">Одностраничный промо-сайт</h3>
-            <div class="using-techs">
-              <span class="using-techs-item">HTML</span>
-              <span class="using-techs-item">CSS</span>
-            </div>
-            <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="card-examples-links">
-              <a href="#" class="card-examples-link code-link">Код</a>
-              <a href="#" class="card-examples-link demo-link">Демо</a>
-            </div>
+          <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</p>
+          <div class="card-examples-links">
+            <a href="#" class="card-examples-link code-link">Код</a>
+            <a href="#" class="card-examples-link demo-link">Демо</a>
           </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/card-image-2.png" alt="изображение проекта">
           </div>
-         </section>
-      </main>
-     </div>
-  </body>
+          <h3 class="card-heading">Одностраничный промо-сайт</h3>
+          <div class="using-techs">
+            <span class="using-techs-item">HTML</span>
+            <span class="using-techs-item">CSS</span>
+          </div>
+          <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</p>
+          <div class="card-examples-links">
+            <a href="#" class="card-examples-link code-link">Код</a>
+            <a href="#" class="card-examples-link demo-link">Демо</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ABOUT ME -->
+    <section class="about">
+      <div class="about-info">
+        <div class="about-image">
+          <img src="./images/prog-man.webp" alt="моя фотография">
+        </div>
+        <div class="about-text">
+          <p class="about-inter">Рад вас видеть</p>
+          <h2 class="about-heading">Я Дмитрий Сердцев</h2>
+          <p>Я разрабатываю сайты для людей и компаний. Делаю всё сам: составляю прототип, дизайн-макет, пишу код.</p>
+          <span>Код, Дизайн, Обучение</span>
+          <p>Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из инструментов есть:
+            Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
+          <div class="sign-image"><img src="./images/sign.png" alt="подпись"></div>
+        </div>
+      </div>
+      <div class="about-skills">
+        <span class="about-skills-heading">Работаю с разными языками и инструментами</span>
+        <div class="using-techs">
+          <span class="using-techs-item">HTML</span>
+          <span class="using-techs-item">CSS</span>
+          <span class="using-techs-item">JavaScript</span>
+          <span class="using-techs-item">Wordpress</span>
+          <span class="using-techs-item">npm</span>
+          <span class="using-techs-item">Reactjs</span>
+          <span class="using-techs-item">Nextjs</span>
+          <span class="using-techs-item">UI Design</span>
+          <span class="using-techs-item">SASS</span>
+        </div>
+      </div>
+    </section>
+    <!-- CONTACT FORM -->
+     <section class="contact-form">
+      <div class="form-wrapper">
+        <h2 class="contact-form-heading">Готов обсудить проект...</h2>
+      <form class="form" action="#">
+        <label for="user-name" hidden>Имя</label>
+        <input type="text" id="user-name" required placeholder="Имя">
+        <label for="user-email" hidden>Email</label>
+        <input type="email" name="user-email" id="user-email" required placeholder="Email">
+        <textarea name="user-message" id="user-message" placeholder="Сообщение"></textarea>
+        <button type="submit" class="btn-submit">Отправить</button>
+      </form>
+      </div>
+     </section>
+  </main>
+</div>
+</body>
+
 </html>
